--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,42 @@
-/vendor/
-node_modules/
+# Laravel & PHP
+/vendor
+/node_modules
+/public/storage
+/public/hot
+/public/mix-manifest.json
+/storage/*.key
+/.env
+Homestead.yaml
+Homestead.json
+.env.backup
+
+# Laravel 5 & 6
+/.vagrant
+.phpunit.result.cache
+/storage/debugbar
+/storage/logs/*.log
+/storage/framework/cache/data/*
+/storage/framework/sessions/*
+/storage/framework/testing/*
+/storage/framework/views/*
+
+# IDE
+/.idea
+/.vscode
+
+# Composer
+composer.lock
+
+# NPM
 npm-debug.log
 yarn-error.log
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
+# Dusk
+/.env.dusk.local
+/screenshots
+/tmp
+.env.dusk.*.local
 
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-storage/
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
-Homestead.yaml
-Homestead.json
-/.vagrant
-.phpunit.result.cache
-
-# Folder Dashboar dan API
-admin.smkbudimuliapakisaji.sch.id/
-api/
-ADD/
+# System files
+.DS_Store
+Thumbs.db
